--- a/style.css
+++ b/style.css
@@ -71,6 +71,25 @@ h1 {
 }
 
 /* Testimonials */
+
+.testimonial-carousel {
+  position: relative;
+  min-height: 180px;
+}
+
+.testimonial {
+  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  position: absolute;
+  width: 100%;
+}
+
+.testimonial.active {
+  display: block;
+  opacity: 1;
+}
+
 .quote {
   max-width: 700px;
   margin: 2rem auto;
