--- a/style.css
+++ b/style.css
@@ -212,22 +212,38 @@ footer {
   }
 
 /* Testimonial */  
-  .testimonial-carousel {
+ .testimonial-carousel {
   position: relative;
-  min-height: 180px;
+  min-height: 200px;
+  padding: 1rem 2rem;
 }
 
-.testimonial {
-  display: none;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
+.testimonial-arrow {
   position: absolute;
-  width: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+  background: red;
+  color: white;
+  border: none;
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  z-index: 10;
+  border-radius: 4px;
+  opacity: 0.8;
 }
 
-.testimonial.active {
-  display: block;
+.testimonial-arrow.prev {
+  left: 0;
+}
+
+.testimonial-arrow.next {
+  right: 0;
+}
+
+.testimonial-arrow:hover {
   opacity: 1;
 }
+
 
 }
