--- a/style.css
+++ b/style.css
@@ -212,10 +212,22 @@ footer {
   }
 
 /* Testimonial */  
- .testimonial-carousel {
+.testimonial-carousel {
   position: relative;
   min-height: 200px;
-  padding: 1rem 2rem;
+}
+
+.testimonial {
+  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  position: absolute;
+  width: 100%;
+}
+
+.testimonial.active {
+  display: block;
+  opacity: 1;
 }
 
 .testimonial-arrow {
