--- a/style.css
+++ b/style.css
@@ -221,11 +221,11 @@ footer {
 }
 
 .testimonial-arrow.prev {
-  left: 10px; /* Move the arrow slightly inside */
+  left: -25px; /* Move the arrow slightly outside */
 }
 
 .testimonial-arrow.next {
-  right: 10px; /* Move the arrow slightly inside */
+  right: -25px; /* Move the arrow slightly outside */
 }
 
 .testimonial-arrow:hover {
